--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   "main": "dist/commonjs/index.js",
   "scripts": {
     "build": "gulp build",
+    "mocha": "mocha test/index.js",
     "watch": "gulp watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm-run-all \"build\" \"mocha\""
   },
   "devDependencies": {
     "@types/chai": "^4.0.4",
@@ -36,6 +37,7 @@
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.2.2",
     "mocha": "^4.0.1",
+    "npm-run-all": "^4.1.1",    
     "typescript": "^2.5.3"
   }
 }
