--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "George Thomas",
   "license": "MIT",
   "main": "dist/commonjs/index.js",
+  "types": "dist/commonjs/index.d.ts",
   "scripts": {
     "build": "gulp build",
     "report": "nyc node_modules/mocha/bin/_mocha test/**/*.js",
